# Conways-Game-Of-Life-Fast

./: CMakeLists.txt  README.md
include/: io.hpp  kernel.cuh
kernel/: kernel.cu
src/: main.cpp
